# aws-organizations-utils

./: Cargo.toml  Dockerfile  README.md
src/: aws_cli_wrapper.rs  cli.yaml  list_accounts.rs  main.rs
