[package]
name = "aws-organizations-utils"
version = "0.1.0"
authors = ["Joey Dumont <joey.dumont@nrc.cnrc.gc.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusoto_core = "*"
rusoto_budgets = {version = "*", features = ["serialize_structs"]}
rusoto_credential = "*"
rusoto_organizations = "*"
comfy-table = "*"
env_logger = "*"
rusoto_sts = "*"
rusoto_s3 = "*"
clap  = {version = "*", features = ["wrap_help"]}
tokio = "*"
async-recursion = "*"
serde = "*"
serde_json = "*"

[[bin]]
name = 'aws-organizations-utils'
